sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:17: error: not found: value debut
    for(j<-(debut to fin).reverse){ 
            ^AlgCocktailSort3:17: error: not found: value fin
    for(j<-(debut to fin).reverse){ 
                     ^AlgCocktailSort3:24: error: not found: value debut
      debut+=1
      ^